--- a/vertx-core/pom.xml
+++ b/vertx-core/pom.xml
@@ -642,7 +642,6 @@
 
   <profiles>
 
-    <!-- Run tests with native transport -->
     <profile>
       <id>NativeEpoll</id>
       <properties>
@@ -652,9 +651,8 @@
       </properties>
     </profile>
 
-    <!-- Run tests with native transport -->
     <profile>
-      <id>IoUring</id>
+      <id>NativeIoUring</id>
       <properties>
         <vertx.testTransport>io_uring</vertx.testTransport>
         <vertx.testDomainSockets>false</vertx.testDomainSockets>
@@ -662,11 +660,28 @@
       </properties>
     </profile>
 
-    <!-- Run tests with native transport and domain sockets -->
     <profile>
       <id>NativeEpoll+DomainSockets</id>
       <properties>
         <vertx.testTransport>epoll</vertx.testTransport>
+        <vertx.testDomainSockets>true</vertx.testDomainSockets>
+        <vertx.testUseModulePath>false</vertx.testUseModulePath>
+      </properties>
+    </profile>
+
+    <profile>
+      <id>NativeKQueue</id>
+      <properties>
+        <vertx.testTransport>kqueue</vertx.testTransport>
+        <vertx.testDomainSockets>false</vertx.testDomainSockets>
+        <vertx.testUseModulePath>false</vertx.testUseModulePath>
+      </properties>
+    </profile>
+
+    <profile>
+      <id>NativeKQueue+DomainSockets</id>
+      <properties>
+        <vertx.testTransport>kqueue</vertx.testTransport>
         <vertx.testDomainSockets>true</vertx.testDomainSockets>
         <vertx.testUseModulePath>false</vertx.testUseModulePath>
       </properties>
@@ -747,10 +762,11 @@
     </profile>
 
     <profile>
-      <id>linux</id>
+      <id>linux-x86_64</id>
       <activation>
         <os>
           <family>linux</family>
+          <arch>x86_64</arch>
         </os>
       </activation>
       <dependencies>
@@ -764,6 +780,54 @@
           <groupId>io.netty</groupId>
           <artifactId>netty-transport-native-io_uring</artifactId>
           <classifier>linux-x86_64</classifier>
+          <scope>test</scope>
+        </dependency>
+      </dependencies>
+    </profile>
+
+    <profile>
+      <id>linux-amd64</id>
+      <activation>
+        <os>
+          <family>linux</family>
+          <arch>amd64</arch>
+        </os>
+      </activation>
+      <dependencies>
+        <dependency>
+          <groupId>io.netty</groupId>
+          <artifactId>netty-transport-native-epoll</artifactId>
+          <classifier>linux-x86_64</classifier>
+          <scope>test</scope>
+        </dependency>
+        <dependency>
+          <groupId>io.netty</groupId>
+          <artifactId>netty-transport-native-io_uring</artifactId>
+          <classifier>linux-x86_64</classifier>
+          <scope>test</scope>
+        </dependency>
+      </dependencies>
+    </profile>
+
+    <profile>
+      <id>linux-aarch64</id>
+      <activation>
+        <os>
+          <family>linux</family>
+          <arch>aarch64</arch>
+        </os>
+      </activation>
+      <dependencies>
+        <dependency>
+          <groupId>io.netty</groupId>
+          <artifactId>netty-transport-native-epoll</artifactId>
+          <classifier>linux-aarch_64</classifier>
+          <scope>test</scope>
+        </dependency>
+        <dependency>
+          <groupId>io.netty</groupId>
+          <artifactId>netty-transport-native-io_uring</artifactId>
+          <classifier>linux-aarch_64</classifier>
           <scope>test</scope>
         </dependency>
       </dependencies>
