Test maven --fail-never for io uring tests

--- a/.github/workflows/ci-5.x.yml
+++ b/.github/workflows/ci-5.x.yml
@@ -22,7 +22,7 @@ jobs:
             stable: true
           - os: ubuntu-latest
             jdk: 11
-            profile: '-PNativeIoUring'
+            profile: '-PNativeIoUring --fail-never'
             stable: false
           - os: ubuntu-latest
             jdk: 11
